GithubUsers/app/src/main/java/com/example/githubusers/core/domain/errors/UnknownError.kt
package com.example.githubusers.core.domain.errors

class UnknownError : Error()
